@@ -1,4 +1,4 @@
-/* omstringstream.cc : A replacement for stringstream.
+/* omstringstream.cc: A replacement for stringstream.
  *
  * ----START-LICENCE----
  * Copyright 1999,2000 BrightStation PLC
